Migrate Java syntax and APIs for new features in Java
This includes fixes from the IntelliJ inspections for Java language level migrations, switch statements, lambdas, etc.